[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/green_slime.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Slime.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 15 ), SubResource( 17 ), SubResource( 8 ) ],
"loop": true,
"name": "jump_ready",
"speed": 12.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "on_air",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 2.0
height = 18.0

[sub_resource type="Animation" id=24]
resource_name = "Hurt"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGraphic:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=25]
resource_local_to_scene = true
radius = 14.0

[node name="Slime" type="KinematicBody2D" groups=["Entities", "Slimes"]]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimGraphic" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "jump_ready"
frame = 9
playing = true

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 26 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 24 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Col" type="CollisionShape2D" parent="Hitbox"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 25 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="StoppingTimer" type="Timer" parent="."]
one_shot = true

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( -14, 0 )

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 14, 0 )

[connection signal="animation_finished" from="AnimGraphic" to="." method="_on_AnimGraphic_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
